--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página Principal - Peluquería "Nombre de la Peluquería"</title>
+    <title>Página Principal - Centro de belleza AK</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <header class="cabecera">
     <div class="logo">
-      <h1>Nombre de la Peluquería</h1>
+      <h1>Centro de belleza AK</h1>
       <!-- Aquí se puede añadir un logo si se dispone de uno -->
     </div>
     <nav>
@@ -43,7 +43,7 @@
   </section>
 
   <footer class="pie-pagina">
-    <p>&copy; 2023 Peluquería "Nombre de la Peluquería". Todos los derechos reservados.</p>
+    <p>&copy; 2023, Centro de belleza AK. Todos los derechos reservados.</p>
   </footer>
 
 </body>
