--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <section id="inicio" class="seccion-inicio">
-    <h2>Bienvenidos a la Peluquería "Nombre de la Peluquería"</h2>
+    <h2>Bienvenidos al Centro de belleza AK</h2>
     <p>Somos expertos en realzar tu belleza y cuidar de tu cabello.</p>
     <a href="#contacto" class="btn-cta">¡Reserva ahora!</a>
   </section>
