--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <section id="inicio" class="seccion-inicio">
     <h2>Bienvenidos al Centro de belleza AK</h2>
-    <p>Somos expertos en realzar tu belleza y cuidar de tu cabello.</p>
+    <p>Somos expertos en realzar tu belleza y cuidar de tu cuerpo.</p>
     <a href="#contacto" class="btn-cta">¡Reserva ahora!</a>
   </section>
 
