--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Página Principal - Centro de belleza AK</title>
     <link rel="stylesheet" href="./assets/CSS/estilos.css">
     <link rel="shortcut icon" href="./assets/images/Icons/Favicon/favicon.png" type="image/x-icon">
-    <link href="./assets/images/Icons/Favicon/ios/iTunesArtwork@1x.png" rel="apple-touch-icon" />
-    <link href="./assets/images/Icons/Favicon/android/mipmap-hdpi/ic_launcher_round.png" rel="icon" sizes="192x192" />
-    <link href="./assets/images/Icons/Favicon/android/mipmap-xxhdpi/ic_launcher_round.png" rel="icon" sizes="128x128" />
+    <link href="./assets/images/Icons/Favicon/ios/AppIcon.appiconset/Icon-App-60x60@2x.png" rel="apple-touch-icon" />
+    <link href="./assets/images/Icons/Favicon/android/mipmap-hdpi/ic_launcher_foreground.png" rel="icon" sizes="192x192" />
+    <link href="./assets/images/Icons/Favicon/android/mipmap-xxhdpi/ic_launcher_foreground.png" rel="icon" sizes="128x128" />
 </head>
 <body>
 
