--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <link href="./assets/images/Icons/Favicon/android/mipmap-xxhdpi/ic_launcher_foreground.png" rel="icon" sizes="128x128" />
 </head>
 <body>
-
   <header class="cabecera">
     <div class="logo">
       <h1>Centro de belleza AK</h1>
-      <!-- Aquí se puede añadir un logo si se dispone de uno -->
+      <img src="./assets/images/Logo_Alla-removebg-preview.png" alt="Logotipo">
     </div>
     <nav>
       <ul>
