--- a/index.html
+++ b/index.html
@@ -17,34 +17,26 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#servicios">Servicios</a></li>
-        <li><a href="#galeria">Galería</a></li>
-        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Galería</a></li>
+        <li><a href="#">Contacto</a></li>
       </ul>
     </nav>
   </header>
+  <section>
+    <article>
+      <h2>Bienvenidos al Centro de belleza AK</h2>
+      <p>Somos expertos en realzar tu belleza y cuidar de tu cuerpo.</p>
+    </article>
+    <article>
+      <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem, eos!</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, enim? Iusto, ipsum modi dolore, officiis esse nam velit debitis ex, et voluptas facilis tenetur nobis sint aut corporis qui atque. Sequi quibusdam, adipisci, sapiente suscipit dolorem doloribus doloremque quas, voluptatum est necessitatibus tempora cum. Inventore quo atque est quaerat tempore exercitationem nostrum sequi doloremque, consequuntur magni possimus ea temporibus id recusandae nemo rerum quod unde quam! Commodi quos assumenda reiciendis distinctio repellat eius quo quod cumque eum? Totam, sint atque. Autem non earum hic quia consequuntur laudantium, illo similique. Qui incidunt beatae placeat rem quod, explicabo iste libero ducimus maiores.</p>
+      <a href="#contacto" class="btn-cta">¡Reserva ahora!</a>
+    </article>
+    <aside>
 
-  <section id="inicio" class="seccion-inicio">
-    <h2>Bienvenidos al Centro de belleza AK</h2>
-    <p>Somos expertos en realzar tu belleza y cuidar de tu cuerpo.</p>
-    <a href="#contacto" class="btn-cta">¡Reserva ahora!</a>
+    </aside>
   </section>
-
-  <section id="servicios" class="seccion-servicios">
-    <h2>Nuestros Servicios</h2>
-    <!-- Aquí se pueden listar los servicios que ofrece la peluquería -->
-  </section>
-
-  <section id="galeria" class="seccion-galeria">
-    <h2>Galería</h2>
-    <!-- Aquí se pueden mostrar imágenes de trabajos realizados -->
-  </section>
-
-  <section id="contacto" class="seccion-contacto">
-    <h2>Contacto</h2>
-    <!-- Formulario de contacto o información de ubicación y contacto -->
-  </section>
-
   <footer class="pie-pagina">
     <p>&copy; 2023, Centro de belleza AK. Todos los derechos reservados.</p>
   </footer>
