--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
   </section>
   <footer class="pie-pagina">
     <p>&copy; 2023, Centro de belleza AK. Todos los derechos reservados.</p>
+    <p><a href="https://ayudaleyprotecciondatos.es/modelo-politica-cookies/" target="_blank">Política de privacidad y cookies</a></p>  
+      <p>Redes sociales:</p>
+    <div class="iconos_de_footer">
+      <a href="https://www.facebook.com/alla.kryvenko.5/" target="_blank"><img src="./assets/images/Icons/facebook_icon.png" class="icon" alt="Facebook"></a>
+      <a href="https://wa.me/34656622653?text=¡Hola!" target="_blank"><img src="./assets/images/Icons/whatsapp_icon.png" class="icon" alt="WhatsApp"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="./assets/images/Icons/twitter_icon.png" class="icon" alt="Twitter"></a>
+      <a href="https://www.instagram.com/nails_manicura_alla/" target="_blank"><img src="./assets/images/Icons/instagram-icon.png" class="icon" alt="Instagram"></a>
+    </div>     
+    <p class="geolocation"><a href="https://maps.app.goo.gl/ZQGNTmqJd49pqTmt5" target="_blank">Nosotros en el mapa:&nbsp;Calle Vicari Samuel Riquelme, 16, El Campello (Alicante)&nbsp;<img src="./assets/images/Icons/google-maps-icon.png" class="icon" alt="GoogleMaps"></a></p>       
   </footer>
 
 </body>
